--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -35,7 +35,7 @@
         <p>Nos reservamos el derecho, a nuestra entera discreción, de modificar o reemplazar estas Condiciones en cualquier momento. Si una revisión es material, intentaremos proporcionar un aviso con al menos 30 días de anticipación antes de que entren en vigor los nuevos términos. Lo que constituye un cambio material se determinará a nuestra entera discreción.</p>
 
         <h2>6. Contacto</h2>
-        <p>Si tiene alguna pregunta sobre estas Condiciones, contáctenos en: <a href="mailto:tu_correo_electronico@ejemplo.com">tu_correo_electronico@ejemplo.com</a></p> <!-- CAMBIA ESTE CORREO -->
+        <p>Si tiene alguna pregunta sobre estas Condiciones, contáctenos en: <a href="mailto:arteextremeno@gmail.com">tu_correo_electronico@ejemplo.com</a></p> <!-- CAMBIA ESTE CORREO -->
 
         <p><a href="index.html">Volver a ToDayList</a></p> <!-- O el nombre de tu archivo principal -->
     </div>
