--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -38,7 +38,7 @@
         <p>Podemos actualizar nuestra Política de Privacidad de vez en cuando. Le notificaremos de cualquier cambio publicando la nueva Política de Privacidad en esta página. Se le aconseja revisar esta Política de Privacidad periódicamente para cualquier cambio.</p>
 
         <h2>6. Contacto</h2>
-        <p>Si tiene alguna pregunta sobre esta Política de Privacidad, puede contactarnos en: <a href="mailto:tu_correo_electronico@ejemplo.com">tu_correo_electronico@ejemplo.com</a></p> <!-- CAMBIA ESTE CORREO -->
+        <p>Si tiene alguna pregunta sobre esta Política de Privacidad, puede contactarnos en: <a href="mailto:arteextremeno@gmail.com">tu_correo_electronico@ejemplo.com</a></p> <!-- CAMBIA ESTE CORREO -->
 
         <p><a href="index.html">Volver a ToDayList</a></p> <!-- O el nombre de tu archivo principal -->
     </div>
