--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       },
       "image": "https://www.todaylist.es/ToDayList.png",
       "screenshot": "https://www.todaylist.es/images/todaylist-screenshot.jpg",
-      "softwareVersion": "1.0.8", 
+      "softwareVersion": "1.0.9", // Incrementada versión por cambios UX/UI
       "datePublished": "2024-03-11", 
       "keywords": "lista de tareas, to-do list, gestor de tareas diarias, productividad, organización, planificación, web app, tareas pendientes, subtareas, prioridades, google drive"
     }
@@ -956,17 +956,13 @@
         #data-management-section { 
             margin-top: 30px;
             margin-bottom: 20px;
-            padding: 20px; 
-            background-color: var(--item-bg);
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.07); 
+            padding: 0 10px; 
         }
         #data-management-section h4 {
             font-family: 'Quicksand', sans-serif;
             font-size: 1.2rem; 
             color: var(--heading-color);
-            margin-top: 0;
+            margin-top: 0; 
             margin-bottom: 10px; 
             text-align: center;
         }
@@ -1000,6 +996,7 @@
             box-shadow: 0 1px 2px rgba(0,0,0,0.06);
             color: var(--button-color); 
             font-weight: 400; 
+            border-radius: 6px; 
         }
         .data-action-button:hover {
             border-color: var(--button-hover-color) !important;
@@ -1106,7 +1103,7 @@
             margin-right: 4px; 
             font-size: 0.9em;  
         }
-        .footer-legal-links { /* Estilo para los enlaces legales */
+        .footer-legal-links { 
             margin-top: 15px; 
             font-size: 0.75em;
         }
@@ -1162,7 +1159,7 @@
                   margin-left: 0;
              }
             #data-management-section {
-                padding: 15px;
+                padding: 15px 10px; /* Ajuste de padding para móvil */
             }
             #data-management-section h4 {
                 font-size: 1.1rem;
@@ -1181,7 +1178,7 @@
                 width: 100%; 
                 margin-bottom: 0; 
             }
-            .data-options-row .data-action-button + .data-action-button { /* Añadir espacio si se apilan */
+            .data-options-row .data-action-button + .data-action-button { 
                  margin-top: 10px;
             }
 
