--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       },
       "image": "https://www.todaylist.es/ToDayList.png",
       "screenshot": "https://www.todaylist.es/images/todaylist-screenshot.jpg",
-      "softwareVersion": "1.0.9", // Incrementada versión por cambios UX/UI
+      "softwareVersion": "1.0.9", 
       "datePublished": "2024-03-11", 
       "keywords": "lista de tareas, to-do list, gestor de tareas diarias, productividad, organización, planificación, web app, tareas pendientes, subtareas, prioridades, google drive"
     }
@@ -900,7 +900,7 @@
 
         #quick-notes-container {
             margin-top: 25px;
-            margin-bottom: 10px;
+            margin-bottom: 50px; /* AUMENTADO PARA MÁS ESPACIO */
             display: flex;
             flex-direction: column;
             gap: 8px;
@@ -943,6 +943,7 @@
             background-color: var(--item-bg);
             border: 1px solid var(--border-color);
             box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+            border-radius: 4px; /* Añadido para consistencia */
         }
         #clear-notes-button:hover {
             color: var(--button-hover-color);
@@ -954,7 +955,7 @@
         }
 
         #data-management-section { 
-            margin-top: 30px;
+            margin-top: 30px; 
             margin-bottom: 20px;
             padding: 0 10px; 
         }
@@ -1159,7 +1160,7 @@
                   margin-left: 0;
              }
             #data-management-section {
-                padding: 15px 10px; /* Ajuste de padding para móvil */
+                padding: 15px 10px; 
             }
             #data-management-section h4 {
                 font-size: 1.1rem;
