--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+
+    <!-- METAETIQUETAS PARA CONTROL DE CACHÉ (PARA EL HTML PRINCIPAL) -->
+    <!-- Le dice al navegador que debe revalidar con el servidor antes de usar una copia cacheada -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <!-- Para proxies HTTP/1.0 -->
+    <meta http-equiv="Pragma" content="no-cache">
+    <!-- Le dice al navegador que la respuesta expira inmediatamente -->
+    <meta http-equiv="Expires" content="0">
+    <!-- FIN METAETIQUETAS PARA CONTROL DE CACHÉ -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0">
 
     <!-- SEO Meta Tags -->
@@ -31,9 +41,13 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Cache busting para fuentes y CSS externos (si los usas) -->
+    <!-- Ejemplo: <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap&v=1" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Ejemplo: <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css?v=6.0.0"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 
     <!-- Schema.org markup for Google -->
     <script type="application/ld+json">
@@ -67,6 +81,7 @@
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
 
     <style>
+        /* ... (Todo tu CSS existente va aquí sin cambios) ... */
         :root {
             --bg-color: #f4f7f6;
             --text-color: #333;
@@ -943,7 +958,7 @@
             background-color: var(--item-bg);
             border: 1px solid var(--border-color);
             box-shadow: 0 1px 2px rgba(0,0,0,0.05);
-            border-radius: 4px; /* Añadido para consistencia */
+            border-radius: 4px; 
         }
         #clear-notes-button:hover {
             color: var(--button-hover-color);
